--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
     <body>
         <%- include('./layouts/navbar')%>
 
-            <h1 class="hi">home page</h1>
+            <h1 class="hi">About page</h1>
 
 
 
